Utilizando JPQL na classe VooRepository e preparando o criteria para o VooServiceImpl, e restaurando certas chamadas do controller.